# webapp_security

./: 1_lab.py  1_lab.txt  2_lab.txt  3_lab.py  3_lab.txt  4_lab.txt  pyproject.toml  union_script.py
AUTH_VULN/: 2_fa_simple_pass.py  account_lock.py  broken_2f_logic.py  brut_f_cookie.py
AUTH_VULN/lab_6/: lab_6.py  lab_6_list.py  lab_6_usernames.py  password_3.txt  usernamelist.txt
BAC/: lab_2.py  lab_3.py  lab_4.py  lab_5.py  lab_6.py
SQLi/: 2_lab.txt  3_lab.txt  4_base_info.py  4_lab.py  4_lab.txt  5_lab.py  6_lab.txt  7_lab.txt  9_lab.txt  find_tables_name.py
SQLi/BLIND/: 1_conditional_response.py  1_lab.py  1_lab.txt  2_lab.py  2_lab.txt  3_lab.py  3_lab.txt  3_time_based.py  4_lab.txt
SQLi/UNION/: 1_lab.txt  2_lab.py  3_lab.py  5_lab.txt  8_lab.txt  9_lab.txt
sql/portSwigger/: 1_lab.py  1_lab.txt  2_lab.py  2_lab.txt  pyproject.toml
